# python_collection

./: .gitignore  LICENSE  README.rst  code_pool.py  learning_with_llm.md  pyproject.toml  shell.py
.github/: copilot-instructions.md  learning_with_llm.md  llm_assisted_project_kickoff_checklist.md
asycio_tute/: areq.py  db.py  event_loop.py  rand.py
asyncio_tute/: aiohttp_tute.py
built_ins/: name_space.py  python_version.py  raise_from.py
class_tute/: magic_str.py  static_example.py
computer science related/: computer science subjects.md  web app development subjects.md
concurrency_related/: CONCURRENCY_GUIDE.md  README.md  concurrency_utils.py
configs/: config.yaml  config.yml  config2.yaml  json_tute.py  opt_config.py  opt_csv.py  opt_env.py  opt_yaml.py  paths.py  pickle_tute.py  read_config.py  read_csv.py  read_env.py  read_yaml.py  reorder_json_example.json
cython/: README.rst
dashboard/: dash_tute.py  streamlit_tute.py
dashboards/: README.md
data/: context_tute.py  datetime.py  datetime_tute.py  db_tute.py  duckdb.py  hash_tute.py  janitor_case_when_tute.py  janitor_tute.py  jinja2_tute.py  jinjasql_tute.py  new.ipynb  numpy_tute.py  pandas.py  pandas_10min_tute.py  pandas_datetime.py  pandas_eval.py  pandas_performance_tute.py  pandas_query.py  pandas_tute.py  regexp.py  regexp_tute.py  s2df_preserve_index_and_order.py  sas.ipynb  seaborn_simple.py  str_formats.py  str_nbr.py  toy_data.py  toydata_exam.ipynb  yfi_tute.py
data_related/: README.md  cleaning_utils.py
database_related/: asyncio_tothread_qry.py  connectors.ipynb
game/: inu_game.py  piano.py  snake_pg_chatgpt.py  snake_pg_copilot.py
general_applic_related/: media_utils.py
generics/: decimal.ipynb  introspection.ipynb  snippets.json  snippets.txt  unzip.ipynb
generics_n_builtins/: common_utils.py  decimal.ipynb  introspection.ipynb  linux_dir_print.ipynb  testing_utils.py
higher_lvl_func/: class_deco.py  class_decorator.py  class_static_method.py  decorator.py  eval_exec.py  fancy_decorator.py  method_decos.py  method_decos_self.py  overload.py  partial.py  property.py
layout/: importlib_tute.py  notebook_related.ipynb  pathlib_scripts.py  type_hint_tute.py
log/: logging_to_loguru.py  logu.py  logu_module.py  loguru_std.py  loguru_to_logging.py  loguru_tute.py
math/: custom_matrix.py  math_tute.py  (+7 more)
(+1096 files in other folders)
